--- a/src/components/clockOut/ClockOut.css
+++ b/src/components/clockOut/ClockOut.css
@@ -1,5 +1,4 @@
 .clockout{
-    display: flex; 
-    align-items: center;
-    justify-content: space-evenly;
+    display: flex;
+    justify-content: space-between;
 }
